<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.arles.swissmanager.ui.activity.TourneyActivity">
    <item
        android:id="@+id/action_create_new_round"
        android:orderInCategory="100"
        android:title="@string/action_create_new_round"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_total_round_number"
        android:orderInCategory="100"
        android:title="@string/action_total_round_number"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_define_winner"
        android:orderInCategory="100"
        android:title="@string/action_define_winner"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sort_by_prestige"
        android:orderInCategory="100"
        android:title="@string/action_sort_by_prestige"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>