<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.arles.swissmanager.ui.activity.RoundActivity">
    <item
        android:id="@+id/action_start_round"
        android:orderInCategory="100"
        android:icon="@drawable/ic_menu_play"
        android:title="@string/action_start_round"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_end_round"
        android:orderInCategory="100"
        android:icon="@drawable/ic_menu_stop"
        android:title="@string/action_end_round"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
